# bpp

./: .gitignore  README.md  make.ps1  noxfile.py  pyproject.toml
.devcontainer/: devcontainer-lock.json
.github/workflows/: dependency-review.yaml  python-ci.yaml  python-publish-pypi.yaml
docs/: conf.py
docs/source/: conf.py  index.rst
examples/: decrement_not_in_memory.bf
src/bpp/: __init__.py  __main__.py  cli.py  exceptions.py  interpreter.py  tokens.py
tests/: test_cli.py  test_example_files.py  test_execution.py  test_interpreter.py  test_smoke.py  test_tokens.py
