[project]
name = "bpp"
version = "0.1.0"
description = "because why not"
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@darbia.dev" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "typer==0.9.0"
]

[project.urls]
repository = "https://github.com/letsbuilda/bpp/"
documentation = "https://docs.letsbuilda.dev/bpp/"

[project.scripts]
bpp = "bpp.cli:app"

[project.optional-dependencies]
dev = [
    "pre-commit==3.6.1",
    "ruff==0.2.1",
    "mypy==1.8.0",
]
tests = [
    "pytest==8.0.0",
    "pytest-randomly==3.15.0",
]
docs = [
    "sphinx==7.2.6",
    "furo==2024.1.29",
    "sphinx-autoapi==3.0.0",
    "releases==2.1.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
preview = true
unsafe-fixes = true
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY001", # (Missing copyright notice at top of file) - No license
]

[tool.ruff.lint.extend-per-file-ignores]
"docs/*" = [
    "INP001", # (File `docs/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Docs are not modules
]
"tests/*" = [
    "INP001", # (File `tests/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Tests are not modules
    "S101", # (Use of `assert` detected) - Yes, that's the point
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.coverage.run]
source = [
    "bpp",
]
