[project]
name = "bpp"
version = "0.1.0"
description = "because why not"
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@tailstory.dev" },
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer==0.24.1"
]

[project.urls]
repository = "https://github.com/letsbuilda/bpp/"
documentation = "https://docs.letsbuilda.dev/bpp/"

[project.scripts]
bpp = "bpp.cli:app"

[dependency-groups]
dev = [
    "nox>=2026.4.10",
    "prek>=0.3.9",
    "ruff>=0.15.11",
    "mypy>=1.20.1",
    "ty>=0.0.31",
]
tests = [
    "pytest>=9.0.3",
    "coverage>=7.13.5",
    "pytest-randomly>=4.0.1",
    "pytest-codspeed>=4.4.0",
]
docs = [
    "sphinx>=8.1.0",
    "furo>=2025.12.19",
    "sphinx-autoapi>=3.8.0",
    "releases>=2.1.1",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "CPY001", # (Missing copyright notice at top of file) - No license
]

[tool.ruff.lint.extend-per-file-ignores]
"docs/*" = [
    "INP001", # (File `docs/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Docs are not modules
]
"tests/*" = [
    "INP001", # (File `tests/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Tests are not modules
    "S101", # (Use of `assert` detected) - Yes, that's the point
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
pretty = true

[tool.coverage.run]
branch = true
source_pkgs = ["bpp"]
source_dirs = ["tests"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.pytest]
strict = true
junit_family = "xunit1"
